--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,1 @@
-
-_site/images/never-leaving-logo.jpg.sb-68b5d8cc-xiVIA9
-
-_site/images/never-leaving-logo.jpg
-
-_site/images/never-leaving-logo.jpg.sb-68b5d8cc-xiVIA9
-
-_site/images/never-leaving-logo.jpg.sb-68b5d8cc-xiVIA9
-
-images/never-leaving-logo.jpg
+_site/
